Hotfix horizontal scrolling issue

--- a/packages/ui/src/styles/components/editorCanvas.sass
+++ b/packages/ui/src/styles/components/editorCanvas.sass
@@ -105,6 +105,7 @@
 	&.view-seamless
 		box-shadow: none
 
-	& &
-		&:not(:first-child)
-			margin-top: var(--cui-fieldContainer-separation)
+	// TODO: Maybe remove completely because --var is missing and has no effect
+	// & &
+	// 	&:not(:first-child)
+	// 		margin-top: var(--cui-fieldContainer-separation)
